--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
                 <!-- The generated prediction will appear here -->
             </div>
             
+            <div id="hindi-summary-container" class="hidden">
+                <!-- Hindi summary will be generated here -->
+            </div>
+            
             <button id="reset-button" class="hidden">Ask Another Question</button>
         </div>
 
